# URLFileDownloader

./: .gitignore  CMakeLists.txt  README.md  URLFileDownloader.slnx
URLFileDownloader/: FileDownloader.hpp  URLFileDownloader.vcxproj  URLFileDownloader.vcxproj.filters  main.cpp
